fix: added another icon.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="./assets/image/icone barbie.jpg"
+      href="./public/assets/image/logo-web.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barbie Movies</title>
